{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 70,
  "lineage": "2574dd39-83a8-6961-b854-790a60a21158",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:949657583279:vpc/vpc-05d7f0d034b2b6acc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-061c1c2de14aa6670",
            "default_route_table_id": "rtb-0d622cff06dfcc9f7",
            "default_security_group_id": "sg-02634709bd96fb998",
            "dhcp_options_id": "dopt-05fdbd6e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05d7f0d034b2b6acc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d622cff06dfcc9f7",
            "owner_id": "949657583279",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "provisioner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056e0134beb3beefb",
            "arn": "arn:aws:ec2:ap-northeast-2:949657583279:instance/i-012a568766a7e1b7c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a568766a7e1b7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "scent2d",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-044eef594b0597c4d",
            "private_dns": "ip-172-31-8-2.ap-northeast-2.compute.internal",
            "private_ip": "172.31.8.2",
            "public_dns": "ec2-3-38-252-156.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.252.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a2bc5d4959b72da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-provisioner-userdata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046821c93066ea56a",
            "tags": {
              "Name": "fastcampus-provisioner"
            },
            "tags_all": {
              "Name": "fastcampus-provisioner"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-002e12b69679536c4"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "userdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056e0134beb3beefb",
            "arn": "arn:aws:ec2:ap-northeast-2:949657583279:instance/i-0a2f7c741abdffc24",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2f7c741abdffc24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "scent2d",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00fdb29421328cc4b",
            "private_dns": "ip-172-31-12-144.ap-northeast-2.compute.internal",
            "private_ip": "172.31.12.144",
            "public_dns": "ec2-54-180-136-40.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.136.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f07ea08a4a00d622",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-provisioner-userdata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046821c93066ea56a",
            "tags": {
              "Name": "fastcampus-userdata"
            },
            "tags_all": {
              "Name": "fastcampus-userdata"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-002e12b69679536c4"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:949657583279:security-group/sg-002e12b69679536c4",
            "description": "Security Group for test.",
            "egress": [],
            "id": "sg-002e12b69679536c4",
            "ingress": [],
            "name": "default-provisioner-userdata",
            "name_prefix": "",
            "owner_id": "949657583279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-provisioner-userdata",
              "Project": "provisioner-userdata",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "default-provisioner-userdata",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "default-provisioner-userdata",
              "Project": "provisioner-userdata",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "default-provisioner-userdata",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7f0d034b2b6acc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-358220876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-002e12b69679536c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP from anywhere.",
            "from_port": 80,
            "id": "sgrule-1957397737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-002e12b69679536c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.security_group.aws_security_group.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 22,
            "id": "sgrule-3256998236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-002e12b69679536c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}